Implementing recommendation controller